--- a/index.html
+++ b/index.html
@@ -20,6 +20,14 @@
           <img src="./img/homepage.jpeg" alt="" />
           Home</a
         >
+        <a href="./product-detail.html" class="col-lg-3">
+          <img src="./img/product-detail.png" alt="">
+          Product Detail
+        </a>
+        <a href="./product-list.html" class="col-lg-3">
+          <img src="./img/product-list.jpeg" alt="">
+          Product List
+        </a>
       </div>
     </div>
   </body>
