--- a/home.html
+++ b/home.html
@@ -163,7 +163,7 @@
             </div>
           </div>
         </div>
-        <div class="product-list row">
+        <div class="product-list row container">
           <div class="col-lg-3">
             <div class="item">
               <img src="./img/pd1.png" alt="" />
@@ -240,7 +240,7 @@
             </div>
           </div>
         </div>
-        <div class="product-list row">
+        <div class="product-list row container">
           <div class="col-lg-3">
             <div class="item">
               <img src="./img/pd1.png" alt="" />
