--- a/index.html
+++ b/index.html
@@ -28,6 +28,45 @@
           <img src="./img/product-list.jpeg" alt="">
           Product List
         </a>
+        
+        <a class="col-lg-3" href="./cart.html">
+          <img src="./img/product-list.jpeg" alt="">
+          cart page</a>
+        <a class="col-lg-3" href="./step1.html">
+          <img src="./img/product-list.jpeg" alt="">
+          checkout 1</a>
+        <a class="col-lg-3" href="./step2.html">
+          <img src="./img/product-list.jpeg" alt="">
+          checkout 1</a>
+
+        <a class="col-lg-3" href="./step3.html">
+          <img src="./img/product-list.jpeg" alt="">
+          checkout 1</a>
+        <a class="col-lg-3" href="./order-detail.html">
+          <img src="./img/product-list.jpeg" alt="">
+          order detail</a>
+        <a class="col-lg-3" href="./order-1.html">
+          <img src="./img/product-list.jpeg" alt="">
+          order 1</a>
+        <a class="col-lg-3" href="./order-2.html">
+          <img src="./img/product-list.jpeg" alt="">
+          order 2</a>
+        <a class="col-lg-3" href="./order-3.html">
+          <img src="./img/product-list.jpeg" alt="">
+          order 3</a>
+        <a class="col-lg-3" href="./signin.html">
+          <img src="./img/product-list.jpeg" alt="">
+          sign in</a>
+        <a class="col-lg-3" href="./signup.html">
+          <img src="./img/product-list.jpeg" alt="">
+          sign up</a>
+        <a class="col-lg-3" href="./reset.html">
+          <img src="./img/product-list.jpeg" alt="">
+          reset</a>
+        <a class="col-lg-3" href="./setpass.html">
+          <img src="./img/product-list.jpeg" alt="">
+          oset pass</a>
+
       </div>
     </div>
   </body>
